//
//  AccessibilityIdentifier.swift
//  GHFollowers
//
//  Created by Abin Baby on 02/01/21.
//

import Foundation

enum AccessibilityIdentifier: String {
    case
        searchView = "view-Search"
    case userListView = "view-UserList"
    case userInfoView = "view-UserInfo"
    case gfAlertView = "view-GFAlertView"
    case userListCollectionView
    case userCell
    case usernameTextField
    case searchButton
    case userListBackButton
    case userInfoGetFollowersButton
    case userInfoGithubProfileButton
    case userInfoDoneButton
}
