...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Search-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="GFSearchViewController" title="Search" id="BYZ-38-t0r" customClass="GFSearchViewController" customModule="GHFollowers" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gh-logo" translatesAutoresizingMaskIntoConstraints="NO" id="gBp-PB-UHU">
                                <rect key="frame" x="87.5" y="50" width="200" height="200"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jSE-3j-n2c" customClass="GFButton" customModule="GHFollowers" customModuleProvider="target">
                                                    <rect key="frame" x="36" y="92" width="303" height="44"/>
                                                    <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="nCJ-6T-m42"/>
                                                    </constraints>
                                                    <state key="normal" title="Github Profile">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="profileButtonAction:" destination="2si-UB-j9b" eventType="touchUpInside" id="FHy-Zv-rl0"/>
                                                    </connections>
                                                </button>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wo9-6v-uvV" customClass="GFButton" customModule="GHFollowers" customModuleProvider="target">
                                                    <rect key="frame" x="36" y="92" width="303" height="44"/>
                                                    <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="o7y-Il-WOq"/>
                                                    </constraints>
                                                    <state key="normal" title="Get Followers">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="follwersButtonAction:" destination="2si-UB-j9b" eventType="touchUpInside" id="Qtg-zH-hqL"/>
                                                    </connections>
                                                </button>
...
