//
//  Constants.swift
//  GHFollowers
//
//  Created by Abin Baby on 29/12/20.
//

import Foundation

// MARK: - Alert

struct Alert {
    static let emptyUsernameTitle = "Empty Username"
    static let emptyUsernameMessage = "Please enter a username. We need to know who to look for 😀."
    static let okButtonLabel = "Ok"

    static let errorTitle = "Oops 🙁"
    static let unknownErrorTitle = "Something went wrong 🙁"
    static let invalidURLTitle = "Invalid URL"
    static let invalidURLMessage = "The url attached to this user is invalid."
}

// MARK: - Storyboards

enum Storyboards {
    static let main = "main"
}
